--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -511,3 +511,164 @@ a {
 .red-light {
     background-color: #F44336;
 }
+
+/* 에러페이지용*/
+.error-page *,
+.error-page *::before,
+.error-page *::after {
+    box-sizing: border-box;
+}
+
+.error-page {
+    display: flex;
+    align-items: center;
+    background: #ffffff;
+    min-width: 275px;
+    height: 100vh;
+    margin: 0 10vw;
+    overflow: hidden;
+    color: #138FF2;
+    font-family: Roboto, sans-serif;
+}
+
+.error-wrapper {
+    flex-grow: 2;
+    width: 40vw;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.error-wrapper h1 {
+    margin: 0;
+    font-size: 6em;
+    font-weight: 100;
+}
+
+.error-wrapper p {
+    width: 95%;
+    font-size: 1.5em;
+    line-height: 1.4;
+}
+
+.error-buttons {
+    white-space: nowrap;
+    display: inline-block;
+}
+
+.error-buttons a {
+    display: inline-block;
+    padding: .8em 1em;
+    margin-right: 1em;
+    margin-bottom: 1em;
+    border: 3px solid #B9DDFB;
+    color: #138FF2;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: .2em;
+    position: relative;
+    overflow: hidden;
+    transition: .3s;
+}
+
+.error-buttons a::before {
+    content: '';
+    background: #138FF2;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: -100%;
+    left: 0;
+    transition: .3s;
+    z-index: -1;
+}
+
+.error-buttons a:hover {
+    color: #E3F2FD;
+}
+
+.error-buttons a:hover::before {
+    top: 0;
+}
+
+.error-buttons span {
+    display: block;
+    text-transform: uppercase;
+    color: #B9DDFB;
+    letter-spacing: 1.5px;
+    text-align: center;
+}
+
+/* 애니메이션 요소 */
+.error-space {
+    width: 75px;
+    height: calc(50vh + 37.5px);
+    border-top-left-radius: 37.5px;
+    border-top-right-radius: 37.5px;
+    overflow: hidden;
+    margin: calc(50vh - 37.5px) auto 0 auto;
+    position: relative;
+    pointer-events: none;
+    transform: translateZ(0);
+}
+
+.error-blackhole {
+    border: 5px solid #1674D1;
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.error-blackhole::after {
+    content: '';
+    height: 85px;
+    width: 85px;
+    border: 5px solid #1674D1;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    z-index: 5;
+    transform: rotate(45deg);
+}
+
+.error-ship {
+    position: absolute;
+    bottom: -150px;
+    height: 150px;
+    width: 65px;
+    animation: error-blackhole-anim 4s infinite linear;
+}
+
+.error-ship img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+
+@keyframes error-blackhole-anim {
+    0% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    70% {
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-100vh);
+        opacity: 0;
+    }
+}
+
+
+@media (max-width: 600px) {
+    .error-page {
+        margin: 0 5vw;
+    }
+}
