--- a/src/main/resources/templates/error/5XX.html
+++ b/src/main/resources/templates/error/5XX.html
@@ -3,8 +3,8 @@
 
   <div class="error-wrapper">
     <h2 class="py-4">500대 에러 페이지</h2>
-    <p>요청하신 내용에 문제가 있어 서버가 처리할 수 없습니다.</p>
-    <p>요청하신 내용을 다시 확인하시고, 문제가 지속될 경우 관리자에게 문의하십시오.</p>
+    <p class="gray-font fs-5">요청하신 내용에 문제가 있어 서버가 처리할 수 없습니다.</p>
+    <p class="gray-font fs-5">요청하신 내용을 다시 확인하시고,<br> 문제가 지속될 경우 관리자에게 문의하십시오.</p>
 
     <div class="error-buttons">
       <a class="navbar-brand nav-font refoam-font" th:href="@{/main}">메인페이지로</a>
