--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -177,6 +177,10 @@ body {
 
 
 /* 컨텐츠 영역 */
+.pre-line {
+    white-space: pre-line;
+}
+
 .btn-refoam {
     --bs-btn-color: #fff;
     --bs-btn-bg: #4166F5;
