mod orderList btn css

--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -256,7 +256,7 @@
                             if (placeholder && !placeholder.querySelector('a')) {
                                 const resultLink = document.createElement("a");
                                 resultLink.href = `/process/${orderId}/list`;
-                                resultLink.className = "btn btn-dark btn-sm border me-2";
+                                resultLink.className = "btn btn-dark btn-sm btn-font-soket me-2";
                                 resultLink.textContent = "공정결과";
                                 placeholder.appendChild(resultLink);
                             }
